--- a/css/styles.css
+++ b/css/styles.css
@@ -6,7 +6,6 @@ html {
 
 body {
     width: 100%;
-    height: 1800px;
     margin: 0;
     font-size: 16px;
 }
@@ -26,7 +25,6 @@ body {
 
 main {
     width: 100%;
-    height: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -46,24 +44,24 @@ h5 {
 
 p {
     margin: 0.2em 0;
+    color: hsl(30, 10%, 34%);
 }
-.container {
+
+.recipe-details-container {
     background-color: hsl(0, 0%, 100%);
-    width: 35%;
+    width: 100%;
     padding: 25px;
     box-sizing: border-box;
-    border-radius: 15px;
 }
 
 .image-container {
-    height: 250px;
+    height: 200px;
 }
 
 img {
     width: 100%;
     height: 100%;
     object-fit: cover;
-    border-radius: 7.5px;
 }
 
 .description {
@@ -103,6 +101,7 @@ img {
 .ingredients-list li,
 .instructions-list li {
     margin: 1em;
+    color: hsl(30, 10%, 34%);
 }
 
 .preparation-list li:last-child,
@@ -138,8 +137,57 @@ td {
     padding: 1em;
 }
 
+td:nth-child(1) {
+    color: hsl(30, 10%, 34%);
+}
+
 td:nth-child(2) {
     color: hsl(14, 45%, 36%);
 }
 
 /* MEDIA QUERIES */
+
+@media screen and (min-width: 768px) {
+    body {
+        height: 1800px;
+    }
+    main {
+        height: 100%;
+    }
+    .recipe-container {
+        width: 70%;
+    }
+    .recipe-details-container {
+        border-bottom-left-radius: 20px;
+        border-bottom-right-radius: 20px;
+    }
+    .image-container {
+        height: 250px;
+        padding: 25px;
+        box-sizing: border-box;
+        background-color: hsl(0, 0%, 100%);
+        border-top-left-radius: 20px;
+        border-top-right-radius: 20px;
+    }
+    img {
+        border-radius: 7.5px;
+    }
+}
+
+@media screen and (min-width: 1024px) {
+    .recipe-container {
+        width: 50%;
+    }
+}
+
+@media screen and (min-width: 1280px) {
+    .recipe-container {
+        width: 45%;
+    }
+}
+
+@media screen and (min-width: 1600px) {
+    .recipe-container {
+        width: 35%;
+    }
+}
